--- a/src/app/main/contract-template/contract-template.component.scss
+++ b/src/app/main/contract-template/contract-template.component.scss
@@ -41,7 +41,7 @@
 }
 
 .list_header{
-  color:#8E9AB0;
+  color:#0041C4;
   text-align: center;
   padding: 12px 12px 0;
   font-weight: 500;
@@ -202,7 +202,7 @@
   padding: 0 10px;
 }
 .img_icon{
-  width: 18px;
+  width: 20px;
   cursor: pointer;
 }
 .img_icon:hover{
