--- a/src/app/main/customer/customer.component.scss
+++ b/src/app/main/customer/customer.component.scss
@@ -10,7 +10,7 @@
   }
   
   .list_header{
-    color:#898989;
+    color:#0041C4;
     text-align: center;
     padding: 12px 12px 0;
     font-weight: 500;
@@ -331,7 +331,7 @@
   #table th {
     //text-align: center;
     background-color: #EBF2FB;
-    color: #8E9AB0;
+    color: #0041C4;
   }
   
   #table tr:last-child th:first-child {
