--- a/src/app/main/report/report-contract-number-follow-status/report-contract-number-follow-status.component.scss
+++ b/src/app/main/report/report-contract-number-follow-status/report-contract-number-follow-status.component.scss
@@ -77,7 +77,7 @@
 #table th {
   //text-align: center;
   background-color: #EBF2FB;
-  color: #8E9AB0;
+  color: #0041C4;
   font-weight: 500;
 }
 
