--- a/src/app/main/contract-template/contract-template.component.html
+++ b/src/app/main/contract-template/contract-template.component.html
@@ -117,7 +117,7 @@
               <span class="three_dot_text">{{'role.contract-template.create-batch' | translate}}</span>
             </button>
             <button mat-menu-item class="div_icon" *ngIf="isShare=='off' && item.status == 10 && item.releaseState=='CON_HIEU_LUC' && isQLMHD_05" (click)="shareContractTemplate(item.id)">
-              <mat-icon><img src="../../assets/img/icon_share.svg" class="img_icon"/></mat-icon>
+              <mat-icon><img src="../../assets/img/share_contract.svg" class="img_icon"/></mat-icon>
               <span class="three_dot_text">{{'btn.share' | translate}}</span>
             </button>
             <button mat-menu-item class="div_icon" *ngIf="isShare=='off' && isQLMHD_07" (click)="deleteContractTemplate(item.id)">
