--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -44,7 +44,7 @@
             <a ngbDropdownItem class="drop" (click)="infoUserDetail()" [routerLink]="['/main/user-infor']">
               <div style="display: flex; align-items: center;">
                 <div class="db_user">
-                  <div class="db_user_detail"></div>
+                  <div><img src="../../assets/img/profile-circle.svg" style="width: 20px;"></div>
                 </div>
                 <div>{{'user.information' | translate }}</div>
               </div>
@@ -53,7 +53,7 @@
             <button *ngIf="!checkMailMbf()" ngbDropdownItem class="drop" (click)="resetPassword()">
               <div style="display: flex; align-items: center;">
                 <div class="db_user">
-                  <div class="db_password"></div>
+                  <div><img src="../../assets/img/refresh-right-square.svg" style="width: 20px;"></div>
                 </div>
                 <div>{{'login.reset_password_new' | translate }}
                   <a href="https://auth-sso.mobifone.vn/vn/profile-information" ></a
@@ -78,7 +78,7 @@
               <a style="color: inherit; text-decoration: none;" href="https://drive.google.com/drive/folders/1NHaCYOMCMsLvrw1uPbX2ezsC-Uo9huW3">
               <div style="display: flex; align-items: center;">
                 <div class="db_user">
-                  <div class="db_document_use"></div>
+                  <div><img src="../../assets/img/document-text.svg" style="width: 20px;"></div>
                 </div>
                 <div>{{'document.user.use' | translate }}</div></div>
               </a>
@@ -88,7 +88,7 @@
               <a href="/assets/upload/mobi_token_sign_setup.zip" style="color: inherit; text-decoration: none;">
               <div style="display: flex; align-items: center;">
                 <div class="db_user">
-                  <div class="db_document_use"></div>
+                  <div><img src="../../assets/img/more-2.svg" style="width: 20px;"></div>
                 </div>
                 <div>{{'document.plugin.pki' | translate }}</div></div>
               </a>
@@ -97,9 +97,9 @@
             <button ngbDropdownItem class="drop_red" routerLink="/login" (click)="logout()">
               <div style="display: flex; align-items: center;">
                 <div class="db_user">
-                  <div class="db_log_out"></div>
+                  <div><img src="../../assets/img/logout.svg" style="width: 20px;"></div>
                 </div>
-                <div>{{'logout' | translate }}</div>
+                <div style="color: #E05050;">{{'logout' | translate }}</div>
               </div>
             </button>
           </div>
