--- a/src/app/main/report/report-eKYC/report-eKYC.component.scss
+++ b/src/app/main/report/report-eKYC/report-eKYC.component.scss
@@ -86,7 +86,7 @@
 #table th {
   //text-align: center;
   background-color: #ebf2fb;
-  color: #8e9ab0;
+  color: #0041C4;
   font-weight: 500;
 }
 
