--- a/src/app/main/report/report-status-contract/report-status-contract.component.scss
+++ b/src/app/main/report/report-status-contract/report-status-contract.component.scss
@@ -89,7 +89,7 @@
 #table th {
   //text-align: center;
   background-color: #ebf2fb;
-  color: #8e9ab0;
+  color: #0041C4;
   font-weight: 500;
 }
 
